<resources>
    <string name="app_name">Active</string>
    <string name="action_settings">Settings</string>
    <string name="gps_record">Record GPS</string>
    <string name="wait">Please wait...</string>
    <string name="gps_latitude">GPS Lattitude</string>
    <string name="gps_longitude">GPS Longitude</string>
    <string name="gps_accuracy">GPS Accuracy</string>
    <string name="gps_altitude">GPS Altitude</string>
    <string name="gps_speed">GPS Speed</string>
    <string name="gps_sensor">GPS Sensor</string>
    <string name="save">SAVE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_text">Login</string>
    <string name="class_session_title">Class Session</string>
</resources>
