<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="classRoom"
            type="com.bantulabtech.active.ClassRoom" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewGeofenceActivity">

        <!--    @{gps.updating_gps == true ? View.GONE : View.VISIBLE}-->
        <Button
            android:id="@+id/btnRecordGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gps_record" />

        <LinearLayout
            android:id="@+id/linearLayoutSpinnerGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="@{classRoom.updating == true ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wait">

            </TextView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLatitudeLabel"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextGPSLatitude"
                android:text="@string/gps_latitude" />

            <EditText
                android:id="@+id/editTextGPSLatitude"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{classRoom.gpsLatitude}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGPSLongitude"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextGPSLongitude"
                android:text="@string/gps_longitude" />

            <EditText
                android:id="@+id/editTextGPSLongitude"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{classRoom.gpsLongitude}" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGPSAccuracy"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextGPSAccuracy"
                android:text="@string/gps_accuracy" />

            <EditText
                android:id="@+id/editTextGPSAccuracy"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{classRoom.gpsAccuracy}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGPSAltitude"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextGPSAltitude"
                android:text="@string/gps_altitude" />

            <EditText
                android:id="@+id/editTextGPSAltitude"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{classRoom.gpsAltitude}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGPSUpdating"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextGPSUpdating"
                android:text="@string/gps_speed" />

            <EditText
                android:id="@+id/editTextGPSUpdating"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{String.valueOf(classRoom.updating)}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGPSSensor"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextGPSSensor"
                android:text="@string/gps_sensor" />

            <EditText
                android:id="@+id/editTextGPSSensor"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{classRoom.gpsProvider}" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSaveGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{!classRoom.updating}"
            android:text="@string/save" />

    </LinearLayout>

</layout>