<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.bantulabtech.active.ui.login.LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation" />
        <action
            android:id="@+id/action_loginFragment_to_navigation"
            app:destination="@id/navigation"
            app:launchSingleTop="true"
            app:popUpTo="@+id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment" />
    <navigation
        android:id="@+id/navigation"
        app:startDestination="@id/navigation_home" >
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.bantulabtech.active.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />
        <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.bantulabtech.active.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />
        <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.bantulabtech.active.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard" />
        <action
            android:id="@+id/action_global_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_global_navigation_notifications"
            app:destination="@id/navigation_notifications"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_global_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
    </navigation>
</navigation>